refeat: recent connection refeat

--- a/app/Components/AsideMenu/Components/RecentConnection/RecentConnection.module.scss
+++ b/app/Components/AsideMenu/Components/RecentConnection/RecentConnection.module.scss
@@ -7,6 +7,10 @@
     width: 100%;
     gap: 12px;
     // border-radius: 8px;
+    padding: 10px;
+    // background-color: #302F3E;
+    position: absolute;
+    bottom: 24px;
 }
 
 .mainContent {
