--- a/app/Components/Status/Status.module.scss
+++ b/app/Components/Status/Status.module.scss
@@ -1,14 +1,10 @@
 .container {
-    width: 320px;
-    height: 73px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-color: transparent;
-    background-image: url('../../../public/Background/statusShape.png');
-    background-repeat: no-repeat;
-    position: absolute;
-    top: 72px;;
-    left: 50%;
+    
 }
 
 .subtext {
