--- a/app/Wrapper/Wrapper.module.scss
+++ b/app/Wrapper/Wrapper.module.scss
@@ -2,6 +2,9 @@
     width: 100%;
     display: flex;
     height: 100vh;
+    flex-direction: column;
+    gap: 16px;
+    padding: 24px 0;
 }
 .content{
     width: 100%;
@@ -9,5 +12,6 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    padding: 24px 0;
+    padding: 0 24px;
+
 }
