--- a/app/Components/RecentConnection/Components/RecenetLocationItem/RecenetLocationItem.module.scss
+++ b/app/Components/RecentConnection/Components/RecenetLocationItem/RecenetLocationItem.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../../global/colors.scss';
+@import '../../../../../global/colors.scss';
 
 .container {
     display: flex;
