--- a/app/AccountSettings/Components/LanguagesComponent/LanguagesComponent.module.scss
+++ b/app/AccountSettings/Components/LanguagesComponent/LanguagesComponent.module.scss
@@ -2,15 +2,19 @@
 
 .text {
     color: $primary-text-color;
-    text-align: center;
     font-family: Inter;
-    font-size: 16px;
+    font-size: 14px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 24px;
 }
 
-.content{
+.content {
     display: flex;
     gap: 8px;
+}
+
+.languages {
+    display: flex;
+    justify-content: space-between;
 }
