--- a/app/Components/Header/Header.module.scss
+++ b/app/Components/Header/Header.module.scss
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    padding: 16px 24px 16px 0px;
+    padding-left: 24px;
     justify-content: space-between;
     align-items: center;
     width: 100%;
@@ -117,7 +117,7 @@
     justify-content: center;
     
     padding: 8px 12px;
-    border-radius: 0px 20px 20px 0px;
+    border-radius: 20px 0px 0px 20px;
 
 
     background-color: #FFCD19;
