--- a/app/Components/BottomBar/Components/BarItem/BarItem.module.scss
+++ b/app/Components/BottomBar/Components/BarItem/BarItem.module.scss
@@ -3,10 +3,11 @@
 .container {
     display: flex;
     align-items: center;
-    justify-content: flex-start; // Align horizontally for text and image
-    gap: 8px; // Spacing between children
+    justify-content: flex-start;
+    gap: 8px;
     width: 48px;
     height: 48px;
+    padding: 0 12px;
     border: none;
     border-radius: 50%;
     background: $primary-background;
@@ -14,29 +15,44 @@
     cursor: pointer;
     overflow: hidden;
 
+    img {
+        flex-shrink: 0;
+        transition: transform 0.3s ease;
+    }
+
     p {
         font-size: 14px;
         color: $primary-text-color;
-        opacity: 0; // Invisible when inactive
-        visibility: hidden; // Prevent interaction
-        max-width: 0; // Collapse to prevent text shifting
-        white-space: nowrap; // Prevent wrapping
+        opacity: 0;
+        visibility: hidden;
+        max-width: 0;
+        white-space: nowrap;
         transition: opacity 0.3s ease, max-width 0.3s ease, visibility 0.3s ease;
-    }
-
-    img {
-        transition: transform 0.3s ease;
     }
 }
 
 .active {
-    max-width: 133px; 
-    width: 100%;
+    width: auto ;
     border-radius: 24px;
+    padding: 8px 16px 8px 4px;
+    transition: width 0.3s ease, transform 0.3s ease;
 
     p {
-        opacity: 1; // Make it visible
-        visibility: visible; // Allow interaction
-        max-width: 100%; // Natural width
+        opacity: 1;
+        visibility: visible;
+        max-width: 100%;
+        transition: opacity 0.3s ease, transform 0.3s ease;
+    }
+
+    .imageWrapper {
+        display: flex;
+        width: 40px;
+        height: 40px;
+        padding: 10px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        border-radius: 50px;
+        background: #723CEB;
     }
 }
