--- a/app/Profile/page.module.scss
+++ b/app/Profile/page.module.scss
@@ -5,7 +5,9 @@
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    flex-direction: column;
+
     background-color: #000000;
 }
 
@@ -15,20 +17,32 @@
     display: flex;
     flex-direction: column;
     gap: 32px;
-
 }
 
-.title {
-    color: $primary-text-color;
-    font-family: Inter;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 22px;
-}
-.header{
+
+.userInfo {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 60%;
+    flex-direction: column;
+}
+
+.userInfoContent {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.btns{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.warning {
+    color: #5C5B5F;
+    font-family: "DM Sans";
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    /* 133.333% */
 }
