--- a/app/Components/BottomBar/BottomBar.module.scss
+++ b/app/Components/BottomBar/BottomBar.module.scss
@@ -3,9 +3,16 @@
     width: 100%;
     height: 48px;
 
+    position: absolute;
+    bottom: 23px;
+    left: 0; 
+    right: 0;
+    
+
     display: flex;
     justify-content: space-between;
     
     margin-top: 24px;
-    padding: 0 16px;
+    padding: 0 40px;
+    
 }
