--- a/app/Wrapper/Wrapper.module.scss
+++ b/app/Wrapper/Wrapper.module.scss
@@ -4,7 +4,8 @@
     height: 100vh;
     flex-direction: column;
     gap: 16px;
-    padding: 24px 0;
+    padding-top: 24px;
+    position: relative;
 }
 .content{
     width: 100%;
@@ -13,5 +14,9 @@
     flex-direction: column;
     position: relative;
     padding: 0 24px;
-
 }
+
+.recentConnectionContainer{
+    margin-bottom: 95px;
+}
+
