--- a/app/Components/Header/Header.module.scss
+++ b/app/Components/Header/Header.module.scss
@@ -146,3 +146,22 @@
     justify-content: space-between;
     width: 50%;
 }
+
+.imageBall {
+    position: absolute;
+    top: 0;
+    /* Aligns container to the top */
+    left: 50%;
+    transform: translateX(-50%);
+    /* Centers container horizontally */
+  
+    background-image: url('/Background/backgroundBall.png');
+    background-repeat: no-repeat;
+    background-position: top center;
+    /* Aligns image to the top-center */
+    background-size: cover;
+    /* Adjust if needed */
+  
+    width: 100%;
+    height: 100%;
+  }
