--- a/app/Login/page.module.scss
+++ b/app/Login/page.module.scss
@@ -1,31 +1,15 @@
-.container{
+@import '../../global/colors.scss';
+
+.page {
     width: 100%;
+    height: 100%;
     display: flex;
-    height: 100vh;
-    flex-direction: column;
-    gap: 16px;
-    padding-top: 24px;
-    position: relative;
-
-    
+    justify-content: center;
+    align-items: center;
 }
-
-.content{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    padding: 0 24px;
-}
-
-.recentConnectionContainer{
-    margin-bottom: 95px;
-}
-
 .imageBall {
     position: absolute;
-    top: -400px;
+    top: 0;
     /* Aligns container to the top */
     left: 50%;
     transform: translateX(-50%);
@@ -38,7 +22,5 @@
   
     width: 100%;
     height: 100%;
-    // background-color: #5f9ea0;
+    background-color: cadetblue;
   }
-
-
