--- a/app/Profile/page.module.scss
+++ b/app/Profile/page.module.scss
@@ -1,49 +1,50 @@
-@import '../../global/colors.scss';
-
+@import "../../global/colors.scss";
 
 .page {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 
-    background-color: #000000;
+//   background-color: #000000;
+//   background-image: url('/Background/backgroundBall.png');
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .conatiner {
-    max-width: 664px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
+  max-width: 664px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
 }
 
-
 .userInfo {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .userInfoContent {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
-.btns{
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    padding-bottom: 95px;
+.btns {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  padding-bottom: 95px;
 }
 
 .warning {
-    color: #5C5B5F;
-    font-family: "DM Sans";
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 16px;
-    /* 133.333% */
+  color: #5c5b5f;
+  font-family: "DM Sans";
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  /* 133.333% */
 }
