--- a/app/Components/BottomBar/BottomBar.module.scss
+++ b/app/Components/BottomBar/BottomBar.module.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: 48px;
 
-    position: absolute;
+    position: fixed;
     bottom: 23px;
     left: 0; 
     right: 0;
