--- a/app/Countries/Components/LocationList/LocationList.module.scss
+++ b/app/Countries/Components/LocationList/LocationList.module.scss
@@ -1,21 +1,19 @@
-
 .content {
-    overflow-x: hidden;
-    cursor: grab;
-    white-space: nowrap;
-    -webkit-overflow-scrolling: touch;
-    width: 100%;
-    height: 100%;
-    max-height: 290px;
-    // background-color: brown;
+  position: relative; /* Ensure pseudo-element is positioned correctly */
+  overflow-x: auto; /* Or hidden, depending on your needs */
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+  width: 100%;
+  height: 100%;
+//   filter: blur(1px);
 }
 
 .content:active {
-    cursor: grabbing;
+  cursor: grabbing;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
