--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,9 @@
 }
 
 body {
-  background-color: #0D0E0E;  
+  background-color: #0D0E0E; 
+
+  /* border radius not working */
+  border-radius: 16px; 
 }
 
