--- a/app/Login/page.module.scss
+++ b/app/Login/page.module.scss
@@ -1,9 +1,154 @@
-@import '../../global/colors.scss';
+@import "../../global/colors.scss";
 
 .page {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 16px;
+}
+.titles {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.titleWrapper {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+.title {
+  color: $primary-text-color;
+  font-family: "DM Sans";
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px; /* 100% */
+}
+
+.subText {
+  color: $secondary-gray-text-color;
+  font-family: "DM Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+.formWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 100%;
+}
+.inputsWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 100%;
+}
+
+.inputs {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.inputItem {
+  width: 100%;
+  padding: 12px 16px;
+  border-radius: 8px;
+  border: 1px solid var(--Additional-stroke, #1f212d);
+  background-color: transparent;
+
+  color: $primary-text-color;
+  font-family: "DM Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
+}
+.inputItemContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.forgot {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+.forgetAncor {
+  color: $primary-Button;
+  text-align: right;
+  font-family: "DM Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px; /* 128.571% */
+  text-decoration: none;
+}
+.decor {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 27px;
+}
+.decorText {
+  color: rgba(181, 183, 191, 0.6);
+  font-family: "DM Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 171.429% */
+}
+.line {
+  width: 100%;
+  border-bottom: solid 0.3px #1f212d;
+}
+
+.otherMeans {
+  display: flex;
+  width: 100%;
+  gap: 16px;
+  justify-content: center;
+}
+.otherMeansItem {
+  display: flex;
+  padding: 8px 12px;
+  border-radius: 8px;
+  border: 1px solid #1f212d;
+}
+
+.signupWrapper {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  justify-content: center;
+}
+.signUP {
+  display: flex;
+  align-items: center;
+  gap: 3px;
+}
+.signUpsubText {
+  color: $secondary-gray-text-color;
+  font-family: "DM Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 171.429% */
+}
+.createAccontAncor {
+  text-decoration: none;
+  color: $primary-Button;
+  font-family: "DM Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
 }
