--- a/app/Countries/page.module.scss
+++ b/app/Countries/page.module.scss
@@ -36,6 +36,10 @@
     height: 100%;
     overflow: auto;
     max-height: 500px;
+
+}
+.containerOption::-webkit-scrollbar {
+  display: none;
 }
 
 .freesContent {
