--- a/app/Register/page.module.scss
+++ b/app/Register/page.module.scss
@@ -153,3 +153,26 @@
   font-weight: 400;
   line-height: 24px;
 }
+
+.policyPurple {
+  color: $primary-Button;
+  font-family: "DM Sans";
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 200% */
+}
+.policyGray {
+  color: $secondary-gray-text-color;
+  font-family: "DM Sans";
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 200% */
+}
+
+.passwordStrength{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
