--- a/app/Components/BottomBar/BottomBar.module.scss
+++ b/app/Components/BottomBar/BottomBar.module.scss
@@ -1,5 +1,5 @@
 .container{
-    // background-color: cadetblue;
+    background: linear-gradient(0deg, #0D0E0E 48.59%, rgba(13, 14, 14, 0.00) 100%);
     width: 100%;
     height: 48px;
 
