--- a/app/ResetPassword/page.module.scss
+++ b/app/ResetPassword/page.module.scss
@@ -7,11 +7,8 @@
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-}
-.content {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
+  gap: 32px;
+  padding-top: 80px;
 }
 .signupWrapper {
   display: flex;
@@ -28,42 +25,4 @@
   font-style: normal;
   font-weight: 400;
   line-height: 18px;
-}
-
-.titles {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-.titleWrapper {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-}
-.title {
-  color: $primary-text-color;
-  font-family: "DM Sans";
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 24px; /* 100% */
-}
-
-.subText {
-  color: $secondary-gray-text-color;
-  font-family: "DM Sans";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px;
-}
-
-.inputsTitle {
-  color: $primary-text-color;
-  font-family: "DM Sans";
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 24px; 
 }
