--- a/app/Wrapper/Wrapper.module.scss
+++ b/app/Wrapper/Wrapper.module.scss
@@ -1,3 +1,4 @@
+@import '../../global/colors.scss';
 .container{
     width: 100%;
     display: flex;
@@ -41,4 +42,17 @@
     // background-color: #5f9ea0;
   }
 
+.bottomBarWrapper{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: fixed;
+    bottom: 0px;
+    left: 0;
+}
+.bottombarCover{
+    width: 100%;
+    height: 30px;
+    background-color: #0D0E0E;
+}
 
