fix: completed  reset component

--- a/app/ResetPassword/Components/Reset/Reset.module.scss
+++ b/app/ResetPassword/Components/Reset/Reset.module.scss
@@ -3,13 +3,22 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 48px;
+}
+.primary{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
 }
 .titles {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+.content {
+  display: flex;
+  flex-direction: column;
 }
 .titleWrapper {
   display: flex;
@@ -22,7 +31,7 @@
   font-size: 32px;
   font-style: normal;
   font-weight: 600;
-  line-height: 44px; /* 137.5% */
+  line-height: 44px; 
 }
 
 .defaultText {
@@ -31,7 +40,7 @@
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
-  line-height: 36px; /* 225% */
+  line-height: 36px; 
 }
 
 .mainContent {
@@ -52,7 +61,7 @@
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 22px; /* 157.143% */
+  line-height: 22px; 
   text-decoration-line: underline;
   text-decoration-style: solid;
   text-decoration-skip-ink: none;
@@ -74,4 +83,30 @@
   text-decoration-thickness: auto;
   text-underline-offset: auto;
   text-underline-position: from-font;
+}
+
+.socialsWrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.socials {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.titleSecond {
+  color: $primary-text-color;
+  font-family: Inter;
+  font-size: 18.573px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 25.538px; 
+  letter-spacing: -0.371px;
+}
+
+.logos {
+  display: flex;
+  gap: 4.643px;
+  align-items: center;
 }
