fixed triangle problem

--- a/app/Wrapper/Wrapper.module.scss
+++ b/app/Wrapper/Wrapper.module.scss
@@ -7,7 +7,10 @@
     gap: 16px;
     padding-top: 24px;
     position: relative;
-    border: 2px solid green; 
+    background-color: #0D0E0E;  
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+
 }
 
 .content{
