--- a/app/globals.css
+++ b/app/globals.css
@@ -6,10 +6,11 @@
 }
 
 body {
-  background-color: #0D0E0E; 
+  /* background-color: #0D0E0E;  */
 
   /* border radius not working */
-  border-radius: 16px; 
+  border-radius: 16px;
+  overflow: hidden;
 }
 
 
@@ -17,32 +18,26 @@ body {
 .layout-container {
   position: relative;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: start;
+  justify-content: start; 
   overflow: hidden;
-  border: 2px solid blue; /* TEMPORARY for debugging */
 }
 
 /* Triangle element styles */
-.triangle1 {
-  position: absolute;
-  top: -10px; /* Adjust based on your layout */
-  left: 50%;
-  transform: translateX(-50%);
-  width: 0;
-  height: 0;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  border-bottom: 10px solid black; /* Triangle color */
-  z-index: 10;
-  background: red; /* TEMPORARY for debugging */
-}
-.triangle{
+.trianglewrapper {
   width: 100%;
-  height: 20px;
-  background-color: cadetblue;
+  display: flex;
+  justify-content: center;
 }
 
+.triangle {
+  width: 0;
+  height: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-bottom: 20px solid #0D0E0E;
+
+}
